src/App.css
.App {
  text-align: center;
  background-color: #f8f9fa;
}

.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 20px;
}

.opis-button {
  background-color: #007bff;
  color: white;
  border: none;
  padding: 10px 20px;
  cursor: pointer;
  border-radius: 5px;
}

.opis-button:hover {
  background-color: #0056b3;
}

.chart-wide {
  margin-bottom: 20px;
}

.wrapper {
  display: flex;
  justify-content: space-between;
  align-content: left;
}

.wrapper > * {
  flex: 1;
}

nav {
  background-color: #3273ff;
  padding: 1rem;
  padding-inline: 18rem;
  display: flex;
  align-items: center;
  justify-content: space-between;
  color: rgb(255, 255, 255);
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  z-index: 1000; /* Ensures it stays on top of other elements */
}

nav h1 {
  margin: 0;
  font-size: 2rem;
  font-family: Helvetica, sans-serif;
}

nav .opis-button {
  text-decoration: none;
  color: rgb(0, 0, 0);
  background-color: #ffffff;
  padding: 0.5rem 1rem;
  border-radius: 4px;
  font-size: 1rem;
  transition: background-color 0.3s ease;
}

nav .opis-button:hover {
  background-color: #969696;
}

body {
  padding-top: 6.5rem; /* Adjust this value as needed */
}


.apexcharts-svg {
  overflow: visible;

}

.chart-container {
  padding: 5rem;
  margin-bottom: auto;
}

.year-selector {
  margin-top: 50px;
  width: 132px;
  position: relative;
  left: 458px;
  display: flex;
  background-color: #e4e4e4;
  border-radius: 7px;
  align-items: center;
}

.arrow-button {
  background-color: transparent;
  border: none;
  font-size: 24px;
  cursor: pointer;
  outline: none;
}

.arrow-button-right {
  position: absolute;
  left: 90px;
  background-color: transparent;
  border: none;
  font-size: 24px;
  cursor: pointer;
  outline: none;
}

.year-display {
  display: inline;
  font-size: 18px;
  left: 80px;
  align-items: center;
  text-align: center;
}

.line-chart {
  position: absolute;
  left: 155px;
}

.bar-chart {
  position: absolute;
  left: 780px;
  margin-bottom: 20px;
}

